// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ZoneEgressListView renders snapshot when multizone 1`] = `
<div
  class="zoneegresses"
>
  <div
    class="kcard-stack"
  >
    <div
      class="kcard-border"
    >
      <div
        class="data-overview"
        data-testid="data-overview"
      >
        <div
          class="data-table-controls mb-2"
        >
          
          
          <button
            class="k-button medium rounded primary refresh-button"
            data-testid="data-overview-refresh-button"
            type="button"
          >
            
            <span
              class="k-button-icon kong-icon kong-icon-redo"
            >
              <svg
                fill="white"
                height="16"
                role="img"
                viewBox="0 0 17 14"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                
  
                <title>
                  Redo
                </title>
                
  
                <path
                  clip-rule="evenodd"
                  d="M12.466 12.06a6.868 6.868 0 112.196-5.676l.85-.85a.847.847 0 011.201-.017c.327.327.315.869-.017 1.2L14.233 9.18c-.342.342-.88.35-1.208.023L10.654 6.83c-.324-.324-.314-.859.028-1.2.34-.34.881-.348 1.2-.029l.847.846a4.938 4.938 0 10-1.63 4.245l1.367 1.367z"
                  fill="white"
                  fill-rule="evenodd"
                />
                

              </svg>
              

            </span>
            
            
             Refresh 
            
            <!---->
          </button>
        </div>
        <div
          class="data-overview-content"
        >
          <div
            class="data-overview-table"
          >
            <div
              class="k-table-container data-overview-table"
              data-testid="data-overview-table"
              is-clickable=""
            >
              <!---->
              <section
                class="k-table-wrapper"
              >
                <table
                  class="k-table has-hover is-clickable"
                  data-tableid="aaaabbbb-cccc-dddd-eeee-ffffffffffff"
                >
                  <thead
                    class=""
                  >
                    <tr
                      class=""
                    >
                      
                      <th
                        class=""
                      >
                        <span
                          class="d-flex align-items-center"
                        >
                          
                          <span
                            class=""
                          >
                            Status
                          </span>
                          
                          <!---->
                        </span>
                      </th>
                      <th
                        class=""
                      >
                        <span
                          class="d-flex align-items-center"
                        >
                          
                          <span
                            class=""
                          >
                            Name
                          </span>
                          
                          <!---->
                        </span>
                      </th>
                      
                    </tr>
                  </thead>
                  <tbody>
                    
                    <tr
                      class="is-selected"
                      role="link"
                      tabindex="0"
                    >
                      
                      <td
                        class="status-column"
                      >
                        
                        <span
                          class="status status--with-title status--success"
                          data-testid="status-badge"
                        >
                          <span
                            class=""
                          >
                            online
                          </span>
                        </span>
                        
                      </td>
                      <td
                        class="entity-column"
                      >
                        
                        <a
                          class=""
                          data-testid="detail-view-link"
                          href="/zones/zone-egresses/zoneegress-1"
                        >
                          zoneegress-1
                        </a>
                        
                      </td>
                      
                    </tr>
                    
                  </tbody>
                </table>
                <!---->
              </section>
            </div>
            <div
              class="pagination"
            >
              <!--v-if-->
              <!--v-if-->
            </div>
          </div>
          <!--v-if-->
          <!--v-if-->
        </div>
      </div>
    </div>
    <div
      class="kcard-border"
    >
      <div
        class="tab-container"
        data-testid="tab-container"
      >
        
        <header
          class="tab__header"
        >
          
          <h1
            class="entity-heading"
          >
             Zone Egress: 
            <div
              class="copy-button-wrapper"
            >
              
              <a
                class=""
                href="/zones/zone-egresses/zoneegress-1"
              >
                zoneegress-1
              </a>
              
              
              <button
                class="k-button small outline copy-button non-visual-button"
                data-testid="copy-button"
                title="Copy"
                type="button"
              >
                
                <!---->
                
                
                <span
                  class="kong-icon kong-icon-copy"
                >
                  <svg
                    height="18"
                    role="img"
                    viewBox="0 0 32 32"
                    width="18"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    
  
                    <title>
                      Copy
                    </title>
                    
  
                    <path
                      d="M25.313 28v-18.688h-14.625v18.688h14.625zM25.313 6.688c1.438 0 2.688 1.188 2.688 2.625v18.688c0 1.438-1.25 2.688-2.688 2.688h-14.625c-1.438 0-2.688-1.25-2.688-2.688v-18.688c0-1.438 1.25-2.625 2.688-2.625h14.625zM21.313 1.313v2.688h-16v18.688h-2.625v-18.688c0-1.438 1.188-2.688 2.625-2.688h16z"
                      fill="currentColor"
                    />
                    

                  </svg>
                  

                </span>
                
                <span
                  class="visually-hidden"
                >
                  Copy
                </span>
                
                
                <!---->
              </button>
              
            </div>
          </h1>
          
        </header>
        <div
          class="tab__content-container"
        >
          <div
            class="k-tabs"
          >
            <ul
              aria-label="Tabs"
              role="tablist"
            >
              
              <li
                aria-controls="panel-0"
                aria-selected="true"
                class="tab-item active"
                id="overview-tab"
                role="tab"
                tabindex="0"
              >
                <div
                  class="tab-link"
                >
                  
                  Overview
                  
                </div>
              </li>
              <li
                aria-controls="panel-1"
                aria-selected="false"
                class="tab-item"
                id="insights-tab"
                role="tab"
                tabindex="0"
              >
                <div
                  class="tab-link"
                >
                  
                  Zone Egress Insights
                  
                </div>
              </li>
              <li
                aria-controls="panel-2"
                aria-selected="false"
                class="tab-item"
                id="xds-configuration-tab"
                role="tab"
                tabindex="0"
              >
                <div
                  class="tab-link"
                >
                  
                  XDS Configuration
                  
                </div>
              </li>
              <li
                aria-controls="panel-3"
                aria-selected="false"
                class="tab-item"
                id="envoy-stats-tab"
                role="tab"
                tabindex="0"
              >
                <div
                  class="tab-link"
                >
                  
                  Stats
                  
                </div>
              </li>
              <li
                aria-controls="panel-4"
                aria-selected="false"
                class="tab-item"
                id="envoy-clusters-tab"
                role="tab"
                tabindex="0"
              >
                <div
                  class="tab-link"
                >
                  
                  Clusters
                  
                </div>
              </li>
              
            </ul>
            
            <div
              aria-labelledby="overview-tab"
              class="tab-container"
              id="panel-0"
              role="tabpanel"
              tabindex="0"
            >
              
              <section
                aria-describedby="aaaabbbb-cccc-dddd-eeee-ffffffffffff"
                class="kong-card noBorder"
              >
                <!---->
                <!---->
                <div
                  class="k-card-content d-flex"
                >
                  <div
                    class="k-card-body"
                    id="aaaabbbb-cccc-dddd-eeee-ffffffffffff"
                  >
                    
                    
                    <dl
                      class="definition-list"
                    >
                      
                      
                      <div
                        class="definition-list-item"
                      >
                        <dt
                          class="definition-list-item__term"
                        >
                          Type
                        </dt>
                        <dd
                          class="definition-list-item__details"
                        >
                          
                          
                          ZoneEgressOverview
                          
                          
                        </dd>
                      </div>
                      <div
                        class="definition-list-item"
                      >
                        <dt
                          class="definition-list-item__term"
                        >
                          Name
                        </dt>
                        <dd
                          class="definition-list-item__details"
                        >
                          
                          <div
                            class="copy-button-wrapper"
                          >
                            
                            <span>
                              zoneegress-1
                            </span>
                            
                            
                            <button
                              class="k-button small outline copy-button non-visual-button"
                              data-testid="copy-button"
                              title="Copy"
                              type="button"
                            >
                              
                              <!---->
                              
                              
                              <span
                                class="kong-icon kong-icon-copy"
                              >
                                <svg
                                  height="18"
                                  role="img"
                                  viewBox="0 0 32 32"
                                  width="18"
                                  xmlns="http://www.w3.org/2000/svg"
                                >
                                  
  
                                  <title>
                                    Copy
                                  </title>
                                  
  
                                  <path
                                    d="M25.313 28v-18.688h-14.625v18.688h14.625zM25.313 6.688c1.438 0 2.688 1.188 2.688 2.625v18.688c0 1.438-1.25 2.688-2.688 2.688h-14.625c-1.438 0-2.688-1.25-2.688-2.688v-18.688c0-1.438 1.25-2.625 2.688-2.625h14.625zM21.313 1.313v2.688h-16v18.688h-2.625v-18.688c0-1.438 1.188-2.688 2.625-2.688h16z"
                                    fill="currentColor"
                                  />
                                  

                                </svg>
                                

                              </span>
                              
                              <span
                                class="visually-hidden"
                              >
                                Copy
                              </span>
                              
                              
                              <!---->
                            </button>
                            
                          </div>
                          
                        </dd>
                      </div>
                      
                      
                    </dl>
                    
                    
                  </div>
                  <!---->
                </div>
              </section>
              
            </div>
            <div
              aria-labelledby="insights-tab"
              class="tab-container"
              id="panel-1"
              role="tabpanel"
              tabindex="0"
            >
              <!---->
            </div>
            <div
              aria-labelledby="xds-configuration-tab"
              class="tab-container"
              id="panel-2"
              role="tabpanel"
              tabindex="0"
            >
              <!---->
            </div>
            <div
              aria-labelledby="envoy-stats-tab"
              class="tab-container"
              id="panel-3"
              role="tabpanel"
              tabindex="0"
            >
              <!---->
            </div>
            <div
              aria-labelledby="envoy-clusters-tab"
              class="tab-container"
              id="panel-4"
              role="tabpanel"
              tabindex="0"
            >
              <!---->
            </div>
            
          </div>
        </div>
        
      </div>
    </div>
  </div>
</div>
`;

exports[`ZoneEgressListView renders snapshot when no multizone 1`] = `
<div
  class="zoneegresses"
>
  <div
    class="kcard-stack"
  >
    <div
      class="kcard-border"
    >
      <div
        class="data-overview"
        data-testid="data-overview"
      >
        <div
          class="data-table-controls mb-2"
        >
          
          
          <button
            class="k-button medium rounded primary refresh-button"
            data-testid="data-overview-refresh-button"
            type="button"
          >
            
            <span
              class="k-button-icon kong-icon kong-icon-redo"
            >
              <svg
                fill="white"
                height="16"
                role="img"
                viewBox="0 0 17 14"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                
  
                <title>
                  Redo
                </title>
                
  
                <path
                  clip-rule="evenodd"
                  d="M12.466 12.06a6.868 6.868 0 112.196-5.676l.85-.85a.847.847 0 011.201-.017c.327.327.315.869-.017 1.2L14.233 9.18c-.342.342-.88.35-1.208.023L10.654 6.83c-.324-.324-.314-.859.028-1.2.34-.34.881-.348 1.2-.029l.847.846a4.938 4.938 0 10-1.63 4.245l1.367 1.367z"
                  fill="white"
                  fill-rule="evenodd"
                />
                

              </svg>
              

            </span>
            
            
             Refresh 
            
            <!---->
          </button>
        </div>
        <div
          class="data-overview-content"
        >
          <div
            class="data-overview-table"
          >
            <div
              class="k-table-container data-overview-table"
              data-testid="data-overview-table"
              is-clickable=""
            >
              <!---->
              <section
                class="k-table-wrapper"
              >
                <table
                  class="k-table has-hover is-clickable"
                  data-tableid="aaaabbbb-cccc-dddd-eeee-ffffffffffff"
                >
                  <thead
                    class=""
                  >
                    <tr
                      class=""
                    >
                      
                      <th
                        class=""
                      >
                        <span
                          class="d-flex align-items-center"
                        >
                          
                          <span
                            class=""
                          >
                            Status
                          </span>
                          
                          <!---->
                        </span>
                      </th>
                      <th
                        class=""
                      >
                        <span
                          class="d-flex align-items-center"
                        >
                          
                          <span
                            class=""
                          >
                            Name
                          </span>
                          
                          <!---->
                        </span>
                      </th>
                      
                    </tr>
                  </thead>
                  <tbody>
                    
                    <tr
                      class="is-selected"
                      role="link"
                      tabindex="0"
                    >
                      
                      <td
                        class="status-column"
                      >
                        
                        <span
                          class="status status--with-title status--success"
                          data-testid="status-badge"
                        >
                          <span
                            class=""
                          >
                            online
                          </span>
                        </span>
                        
                      </td>
                      <td
                        class="entity-column"
                      >
                        
                        <a
                          class=""
                          data-testid="detail-view-link"
                          href="/zones/zone-egresses/zoneegress-1"
                        >
                          zoneegress-1
                        </a>
                        
                      </td>
                      
                    </tr>
                    
                  </tbody>
                </table>
                <!---->
              </section>
            </div>
            <div
              class="pagination"
            >
              <!--v-if-->
              <!--v-if-->
            </div>
          </div>
          <!--v-if-->
          <!--v-if-->
        </div>
      </div>
    </div>
    <div
      class="kcard-border"
    >
      <div
        class="tab-container"
        data-testid="tab-container"
      >
        
        <header
          class="tab__header"
        >
          
          <h1
            class="entity-heading"
          >
             Zone Egress: 
            <div
              class="copy-button-wrapper"
            >
              
              <a
                class=""
                href="/zones/zone-egresses/zoneegress-1"
              >
                zoneegress-1
              </a>
              
              
              <button
                class="k-button small outline copy-button non-visual-button"
                data-testid="copy-button"
                title="Copy"
                type="button"
              >
                
                <!---->
                
                
                <span
                  class="kong-icon kong-icon-copy"
                >
                  <svg
                    height="18"
                    role="img"
                    viewBox="0 0 32 32"
                    width="18"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    
  
                    <title>
                      Copy
                    </title>
                    
  
                    <path
                      d="M25.313 28v-18.688h-14.625v18.688h14.625zM25.313 6.688c1.438 0 2.688 1.188 2.688 2.625v18.688c0 1.438-1.25 2.688-2.688 2.688h-14.625c-1.438 0-2.688-1.25-2.688-2.688v-18.688c0-1.438 1.25-2.625 2.688-2.625h14.625zM21.313 1.313v2.688h-16v18.688h-2.625v-18.688c0-1.438 1.188-2.688 2.625-2.688h16z"
                      fill="currentColor"
                    />
                    

                  </svg>
                  

                </span>
                
                <span
                  class="visually-hidden"
                >
                  Copy
                </span>
                
                
                <!---->
              </button>
              
            </div>
          </h1>
          
        </header>
        <div
          class="tab__content-container"
        >
          <div
            class="k-tabs"
          >
            <ul
              aria-label="Tabs"
              role="tablist"
            >
              
              <li
                aria-controls="panel-0"
                aria-selected="true"
                class="tab-item active"
                id="overview-tab"
                role="tab"
                tabindex="0"
              >
                <div
                  class="tab-link"
                >
                  
                  Overview
                  
                </div>
              </li>
              <li
                aria-controls="panel-1"
                aria-selected="false"
                class="tab-item"
                id="insights-tab"
                role="tab"
                tabindex="0"
              >
                <div
                  class="tab-link"
                >
                  
                  Zone Egress Insights
                  
                </div>
              </li>
              <li
                aria-controls="panel-2"
                aria-selected="false"
                class="tab-item"
                id="xds-configuration-tab"
                role="tab"
                tabindex="0"
              >
                <div
                  class="tab-link"
                >
                  
                  XDS Configuration
                  
                </div>
              </li>
              <li
                aria-controls="panel-3"
                aria-selected="false"
                class="tab-item"
                id="envoy-stats-tab"
                role="tab"
                tabindex="0"
              >
                <div
                  class="tab-link"
                >
                  
                  Stats
                  
                </div>
              </li>
              <li
                aria-controls="panel-4"
                aria-selected="false"
                class="tab-item"
                id="envoy-clusters-tab"
                role="tab"
                tabindex="0"
              >
                <div
                  class="tab-link"
                >
                  
                  Clusters
                  
                </div>
              </li>
              
            </ul>
            
            <div
              aria-labelledby="overview-tab"
              class="tab-container"
              id="panel-0"
              role="tabpanel"
              tabindex="0"
            >
              
              <section
                aria-describedby="aaaabbbb-cccc-dddd-eeee-ffffffffffff"
                class="kong-card noBorder"
              >
                <!---->
                <!---->
                <div
                  class="k-card-content d-flex"
                >
                  <div
                    class="k-card-body"
                    id="aaaabbbb-cccc-dddd-eeee-ffffffffffff"
                  >
                    
                    
                    <dl
                      class="definition-list"
                    >
                      
                      
                      <div
                        class="definition-list-item"
                      >
                        <dt
                          class="definition-list-item__term"
                        >
                          Type
                        </dt>
                        <dd
                          class="definition-list-item__details"
                        >
                          
                          
                          ZoneEgressOverview
                          
                          
                        </dd>
                      </div>
                      <div
                        class="definition-list-item"
                      >
                        <dt
                          class="definition-list-item__term"
                        >
                          Name
                        </dt>
                        <dd
                          class="definition-list-item__details"
                        >
                          
                          <div
                            class="copy-button-wrapper"
                          >
                            
                            <span>
                              zoneegress-1
                            </span>
                            
                            
                            <button
                              class="k-button small outline copy-button non-visual-button"
                              data-testid="copy-button"
                              title="Copy"
                              type="button"
                            >
                              
                              <!---->
                              
                              
                              <span
                                class="kong-icon kong-icon-copy"
                              >
                                <svg
                                  height="18"
                                  role="img"
                                  viewBox="0 0 32 32"
                                  width="18"
                                  xmlns="http://www.w3.org/2000/svg"
                                >
                                  
  
                                  <title>
                                    Copy
                                  </title>
                                  
  
                                  <path
                                    d="M25.313 28v-18.688h-14.625v18.688h14.625zM25.313 6.688c1.438 0 2.688 1.188 2.688 2.625v18.688c0 1.438-1.25 2.688-2.688 2.688h-14.625c-1.438 0-2.688-1.25-2.688-2.688v-18.688c0-1.438 1.25-2.625 2.688-2.625h14.625zM21.313 1.313v2.688h-16v18.688h-2.625v-18.688c0-1.438 1.188-2.688 2.625-2.688h16z"
                                    fill="currentColor"
                                  />
                                  

                                </svg>
                                

                              </span>
                              
                              <span
                                class="visually-hidden"
                              >
                                Copy
                              </span>
                              
                              
                              <!---->
                            </button>
                            
                          </div>
                          
                        </dd>
                      </div>
                      
                      
                    </dl>
                    
                    
                  </div>
                  <!---->
                </div>
              </section>
              
            </div>
            <div
              aria-labelledby="insights-tab"
              class="tab-container"
              id="panel-1"
              role="tabpanel"
              tabindex="0"
            >
              <!---->
            </div>
            <div
              aria-labelledby="xds-configuration-tab"
              class="tab-container"
              id="panel-2"
              role="tabpanel"
              tabindex="0"
            >
              <!---->
            </div>
            <div
              aria-labelledby="envoy-stats-tab"
              class="tab-container"
              id="panel-3"
              role="tabpanel"
              tabindex="0"
            >
              <!---->
            </div>
            <div
              aria-labelledby="envoy-clusters-tab"
              class="tab-container"
              id="panel-4"
              role="tabpanel"
              tabindex="0"
            >
              <!---->
            </div>
            
          </div>
        </div>
        
      </div>
    </div>
  </div>
</div>
`;

exports[`ZoneEgressListView renders zoneegress insights 1`] = `
<div
  class="tab-container"
  data-testid="tab-container"
>
  
  <header
    class="tab__header"
  >
    
    <h1
      class="entity-heading"
    >
       Zone Egress: 
      <div
        class="copy-button-wrapper"
      >
        
        <a
          class=""
          href="/zones/zone-egresses/zoneegress-1"
        >
          zoneegress-1
        </a>
        
        
        <button
          class="k-button small outline copy-button non-visual-button"
          data-testid="copy-button"
          title="Copy"
          type="button"
        >
          
          <!---->
          
          
          <span
            class="kong-icon kong-icon-copy"
          >
            <svg
              height="18"
              role="img"
              viewBox="0 0 32 32"
              width="18"
              xmlns="http://www.w3.org/2000/svg"
            >
              
  
              <title>
                Copy
              </title>
              
  
              <path
                d="M25.313 28v-18.688h-14.625v18.688h14.625zM25.313 6.688c1.438 0 2.688 1.188 2.688 2.625v18.688c0 1.438-1.25 2.688-2.688 2.688h-14.625c-1.438 0-2.688-1.25-2.688-2.688v-18.688c0-1.438 1.25-2.625 2.688-2.625h14.625zM21.313 1.313v2.688h-16v18.688h-2.625v-18.688c0-1.438 1.188-2.688 2.625-2.688h16z"
                fill="currentColor"
              />
              

            </svg>
            

          </span>
          
          <span
            class="visually-hidden"
          >
            Copy
          </span>
          
          
          <!---->
        </button>
        
      </div>
    </h1>
    
  </header>
  <div
    class="tab__content-container"
  >
    <div
      class="k-tabs"
    >
      <ul
        aria-label="Tabs"
        role="tablist"
      >
        
        <li
          aria-controls="panel-0"
          aria-selected="false"
          class="tab-item"
          id="overview-tab"
          role="tab"
          tabindex="0"
        >
          <div
            class="tab-link"
          >
            
            Overview
            
          </div>
        </li>
        <li
          aria-controls="panel-1"
          aria-selected="true"
          class="tab-item active"
          id="insights-tab"
          role="tab"
          tabindex="0"
        >
          <div
            class="tab-link"
          >
            
            Zone Egress Insights
            
          </div>
        </li>
        <li
          aria-controls="panel-2"
          aria-selected="false"
          class="tab-item"
          id="xds-configuration-tab"
          role="tab"
          tabindex="0"
        >
          <div
            class="tab-link"
          >
            
            XDS Configuration
            
          </div>
        </li>
        <li
          aria-controls="panel-3"
          aria-selected="false"
          class="tab-item"
          id="envoy-stats-tab"
          role="tab"
          tabindex="0"
        >
          <div
            class="tab-link"
          >
            
            Stats
            
          </div>
        </li>
        <li
          aria-controls="panel-4"
          aria-selected="false"
          class="tab-item"
          id="envoy-clusters-tab"
          role="tab"
          tabindex="0"
        >
          <div
            class="tab-link"
          >
            
            Clusters
            
          </div>
        </li>
        
      </ul>
      
      <div
        aria-labelledby="overview-tab"
        class="tab-container"
        id="panel-0"
        role="tabpanel"
        tabindex="0"
      >
        <!---->
      </div>
      <div
        aria-labelledby="insights-tab"
        class="tab-container"
        id="panel-1"
        role="tabpanel"
        tabindex="0"
      >
        
        <section
          aria-describedby="aaaabbbb-cccc-dddd-eeee-ffffffffffff"
          class="kong-card noBorder"
        >
          <!---->
          <!---->
          <div
            class="k-card-content d-flex"
          >
            <div
              class="k-card-body"
              id="aaaabbbb-cccc-dddd-eeee-ffffffffffff"
            >
              
              
              <ul
                class="accordion-list"
              >
                
                
                <li
                  class="accordion-item active"
                >
                  <button
                    aria-expanded="true"
                    class="accordion-item-header"
                    data-testid="accordion-item-button"
                    type="button"
                  >
                    
                    <h4
                      class="text-lg font-medium"
                    >
                      <span
                        class="color-green-500"
                      >
                         Connect time: July 13, 2021 at 8:41:04 AM
                      </span>
                      <!--v-if-->
                    </h4>
                    
                  </button>
                  <transition-stub
                    appear="false"
                    css="true"
                    name="accordion"
                    persisted="false"
                  >
                    <div
                      class="accordion-item-content"
                      data-testid="accordion-item-content"
                    >
                      
                      <div>
                        <div>
                          <h5
                            class="overview-tertiary-title"
                          >
                             General Information: 
                          </h5>
                          <dl
                            class="definition-list"
                          >
                            
                            <!--v-if-->
                            <div
                              class="definition-list-item"
                            >
                              <dt
                                class="definition-list-item__term"
                              >
                                CP instance ID
                              </dt>
                              <dd
                                class="definition-list-item__details"
                              >
                                
                                kuma-control-plane-84f5589874-nmspq-0867
                                
                              </dd>
                            </div>
                            <div
                              class="definition-list-item"
                            >
                              <dt
                                class="definition-list-item__term"
                              >
                                Last connected
                              </dt>
                              <dd
                                class="definition-list-item__details"
                              >
                                
                                July 13, 2021
                                
                              </dd>
                            </div>
                            <!--v-if-->
                            
                          </dl>
                        </div>
                        <div
                          class="columns mt-4"
                          style="--columns: 4;"
                        >
                          
                          
                          <div>
                            <h6
                              class="overview-tertiary-title"
                            >
                              CDS: 
                            </h6>
                            <dl
                              class="definition-list"
                            >
                              
                              
                              <div
                                class="definition-list-item"
                              >
                                <dt
                                  class="definition-list-item__term"
                                >
                                  Responses sent
                                </dt>
                                <dd
                                  class="definition-list-item__details"
                                >
                                  
                                  3
                                  
                                </dd>
                              </div>
                              <div
                                class="definition-list-item"
                              >
                                <dt
                                  class="definition-list-item__term"
                                >
                                  Responses acknowledged
                                </dt>
                                <dd
                                  class="definition-list-item__details"
                                >
                                  
                                  3
                                  
                                </dd>
                              </div>
                              
                              
                            </dl>
                          </div>
                          
                          
                          <div>
                            <h6
                              class="overview-tertiary-title"
                            >
                              EDS: 
                            </h6>
                            <dl
                              class="definition-list"
                            >
                              
                              
                              <div
                                class="definition-list-item"
                              >
                                <dt
                                  class="definition-list-item__term"
                                >
                                  Responses sent
                                </dt>
                                <dd
                                  class="definition-list-item__details"
                                >
                                  
                                  2
                                  
                                </dd>
                              </div>
                              <div
                                class="definition-list-item"
                              >
                                <dt
                                  class="definition-list-item__term"
                                >
                                  Responses acknowledged
                                </dt>
                                <dd
                                  class="definition-list-item__details"
                                >
                                  
                                  3
                                  
                                </dd>
                              </div>
                              
                              
                            </dl>
                          </div>
                          
                          
                          <div>
                            <h6
                              class="overview-tertiary-title"
                            >
                              LDS: 
                            </h6>
                            <dl
                              class="definition-list"
                            >
                              
                              
                              <div
                                class="definition-list-item"
                              >
                                <dt
                                  class="definition-list-item__term"
                                >
                                  Responses sent
                                </dt>
                                <dd
                                  class="definition-list-item__details"
                                >
                                  
                                  3
                                  
                                </dd>
                              </div>
                              <div
                                class="definition-list-item"
                              >
                                <dt
                                  class="definition-list-item__term"
                                >
                                  Responses acknowledged
                                </dt>
                                <dd
                                  class="definition-list-item__details"
                                >
                                  
                                  3
                                  
                                </dd>
                              </div>
                              
                              
                            </dl>
                          </div>
                          
                          
                          <!--v-if-->
                          
                          
                        </div>
                      </div>
                      
                    </div>
                  </transition-stub>
                </li>
                
                
              </ul>
              
              
            </div>
            <!---->
          </div>
        </section>
        
      </div>
      <div
        aria-labelledby="xds-configuration-tab"
        class="tab-container"
        id="panel-2"
        role="tabpanel"
        tabindex="0"
      >
        <!---->
      </div>
      <div
        aria-labelledby="envoy-stats-tab"
        class="tab-container"
        id="panel-3"
        role="tabpanel"
        tabindex="0"
      >
        <!---->
      </div>
      <div
        aria-labelledby="envoy-clusters-tab"
        class="tab-container"
        id="panel-4"
        role="tabpanel"
        tabindex="0"
      >
        <!---->
      </div>
      
    </div>
  </div>
  
</div>
`;
